--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -23,9 +23,9 @@
                 <td>{{ post.content|length > 30 ? post.content[:30] ~ '...' : post.content }}</td>
                 <td>{{ post.createdAt|date("Y-m-d H:i") }}</td>
                 <td>
-                    <a  class="btn btn-info btn-sm">View</a>
-                    <a  class="btn btn-warning btn-sm">Edit</a>
-                    <a  class="btn btn-danger btn-sm">Delete</a>
+                    <a href="{{ path('post_show', {id: post.id}) }}" class="btn btn-info btn-sm">View</a>
+                    <a href="{{ path('post_edit', {id: post.id}) }}" class="btn btn-warning btn-sm">Edit</a>
+                    <a href="{{ path('post_delete', {id: post.id}) }}" class="btn btn-danger btn-sm">Delete</a>
                 </td>
             </tr>
         {% endfor %}
